Changed POM.xml structure and restructured tests to function.